--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -627,6 +627,7 @@
     &:hover {
       font-weight: 700;
       color: $accent-color;
+      letter-spacing: -0.9px;
     }
   }
 }
